tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_rust__rust_empty_line_preservation_disabled.snap
---
source: tests/integration/languages/typing_core_rust.rs
expression: snapshot
---
# text_original
fn main() {
    let x = 1;

    let y = 2;
    
    println!("{} {}", x, y);
}

# text_to_type
fn main() {
let x = 1;
let y = 2;
println!("{} {}", x, y);
}

# text_to_display
fn main() {↵
    let x = 1;↵

    let y = 2;↵
    
    println!("{} {}", x, y);↵
}↵
