tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_rust__rust_function_with_block_comment.snap
---
source: tests/integration/languages/typing_core_rust.rs
expression: snapshot
---
# text_original
fn calculate(x: i32) -> i32 {
    /* This is a block comment
       spanning multiple lines */
    x * 2
}

# text_to_type
fn calculate(x: i32) -> i32 {
x * 2
}

# text_to_display
fn calculate(x: i32) -> i32 {↵
    /* This is a block comment
       spanning multiple lines */
    x * 2↵
}↵
