tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_rust__rust_function_with_comment.snap
---
source: tests/integration/languages/typing_core_rust.rs
expression: snapshot
---
# text_original
fn main() {
    println!("Hello"); // This is a comment
}

# text_to_type
fn main() {
println!("Hello");
}

# text_to_display
fn main() {↵
    println!("Hello");↵ // This is a comment
}↵
