tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_rust__rust_struct_with_line_comments.snap
---
source: tests/integration/languages/typing_core_rust.rs
expression: snapshot
---
# text_original
struct Person {
    name: String, // Person's name
    age: u32,     // Person's age in years
}

# text_to_type
struct Person {
name: String,
age: u32,
}

# text_to_display
struct Person {↵
    name: String,↵ // Person's name
    age: u32,↵     // Person's age in years
}↵
